# camera_pose_calibration

./: CHANGELOG.rst  CMakeLists.txt  README.md  calibration.rviz  nodelet_plugins.xml  package.xml
camera_pose_calibration/: CMakeLists.txt  package.xml
camera_pose_calibration/launch/: rviz.launch
camera_pose_calibration/msg/: PatternParameters.msg
camera_pose_calibration/src/: camera_pose_calibration.cpp  camera_pose_calibration.hpp  main.cpp  node.cpp  node.hpp  nodelet.cpp
camera_pose_calibration/srv/: Calibrate.srv  CalibrateFile.srv  CalibrateTopic.srv
include/camera_pose_calibration/: camera_pose_calibration.hpp  camera_pose_calibration_impl.hpp
launch/: nodelet.launch  rviz.launch
src/: camera_pose_calibration.cpp  camera_pose_calibration.hpp  example_cam_cal.cpp  main.cpp  node.cpp  node.hpp  nodelet.cpp  test_matrix_inverse.cpp
srv/: CalibrateTopic.srv
test/: camera_pose_calibration.cpp
