<?xml version="1.0"?>
<package format="2">
  <name>camera_pose_calibration</name>
  <version>0.1.2</version>
  <description>Camera pose calibration using the OpenCV asymmetric circles pattern.</description>

	<maintainer email="r.m.ensing@delftrobotics.com">Ronald Ensing</maintainer>

	<author email="j.c.gaiser@delftrobotics.com">Hans Gaiser</author>
	<author email="j.a.vanegmond@tudelft.nl">Jeff van Egmond</author>
	<author email="maarten@de-vri.es">Maarten de Vries</author>
	<author email="m.a.morariu@delftrobotics.com">Mihai Morariu</author>
	<author email="r.m.ensing@delftrobotics.com">Ronald Ensing</author>

	<license>Apache 2.0</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>cv_bridge</depend>
	<depend>cmake_modules</depend>
	<depend>dr_base</depend>
	<depend>eigen_conversions</depend>
	<depend>image_transport</depend>
	<depend>geometry_msgs</depend>
	<depend>message_generation</depend>
	<depend>nodelet</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>tf</depend>
	<depend>tf_conversions</depend>
	<depend>visualization_msgs</depend>

	<test_depend>rosunit</test_depend>
	<exec_depend>message_runtime</exec_depend>

	<export>
		<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	</export>

</package>
