<?xml version="1.0"?>
<package format="2">
  <name>camera_pose_calibration</name>
  <version>0.1.0</version>
  <description>Camera pose calibration using the OpenCV asymmetric circles pattern.</description>

	<maintainer email="r.m.ensing@delftrobotics.com">Ronald Ensing</maintainer>

	<author email="j.c.gaiser@delftrobotics.com">Hans Gaiser</author>
	<author email="todo@example.com">Jeff van Egmond</author>
	<author email="maarten@de-vri.es">Maarten de Vries</author>
	<author email="r.m.ensing@delftrobotics.com">Ronald Ensing</author>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>cv_bridge</depend>
	<depend>dr_base</depend>
	<depend>dr_opencv</depend>
	<depend>dr_pcl</depend>
	<depend>dr_util</depend>
	<depend>eigen_conversions</depend>
	<depend>image_transport</depend>
	<depend>nodelet</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>tf</depend>
	<depend>tf_conversions</depend>
	<depend>visualization_msgs</depend>

	<export>
		<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	</export>

</package>
